KSENROLL-12803 - Fixed Create ACAL / Buttons are misaligned
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@69272 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
@@ -1763,7 +1763,7 @@ fieldset[data-type="InputSet"] {
 }
 
 .ks-search-group-footer{
-  margin-bottom: 6px;
+  margin-top: 17px;
   display: inline-block;
 }
 
